lib: update Kconfig

--- a/lib/Kconfig
+++ b/lib/Kconfig
@@ -121,6 +121,10 @@ config DECOMPRESS_LZO
 	select LZO_DECOMPRESS
 	tristate
 
+config DECOMPRESS_XZ
+	select XZ_DEC
+	tristate
+
 #
 # Generic allocator support is selected if needed
 #
