Move device specific codes in dhd driver to board-msm7x30.c.
Device specific codes should be in board-msm7x30.c.

--- a/drivers/net/wireless/bcm4330/Makefile
+++ b/drivers/net/wireless/bcm4330/Makefile
@@ -3,7 +3,7 @@ DHDCFLAGS = -DLINUX -DBCMDRIVER -DBCMDONGLEHOST -DUNRELEASEDCHIP      \
   -DBCMDMA32 -DBCMFILEIMAGE -DEMBEDDED_PLATFORM -DCSCAN -DDHDTHREAD   \
   -DDHD_GPL -DDHD_SCHED -DSDTEST -DBDC -DTOE -DDHD_BCMEVENTS          \
   -DSHOW_EVENTS -DDONGLEOVERLAYS -DBCMSDIO -DDHD_GPL -DBCMLXSDMMC     \
-  -DBCMPLATFORM_BUS -DSDIO_ISR_THREAD -DWIFI_ACT_FRAME                \
+  -DBCMPLATFORM_BUS -DSDIO_ISR_THREAD -DWIFI_ACT_FRAME -DCUSTOMER_HW  \
 	-Idrivers/net/wireless/bcm4330 -Idrivers/net/wireless/bcm4330/include
 
 DHDOFILES =         \
