Use max17040_fuelgauger driver.

--- a/arch/arm/configs/cyanogenmod_ponyo_defconfig
+++ b/arch/arm/configs/cyanogenmod_ponyo_defconfig
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Linux kernel version: 2.6.35.11
-# Wed Jan 23 07:40:44 2013
+# Tue Jan 29 19:12:35 2013
 #
 CONFIG_ARM=y
 CONFIG_SYS_SUPPORTS_APM_EMULATION=y
@@ -1528,7 +1528,8 @@ CONFIG_POWER_SUPPLY=y
 # CONFIG_BATTERY_DS2760 is not set
 # CONFIG_BATTERY_DS2782 is not set
 # CONFIG_BATTERY_BQ27x00 is not set
-CONFIG_BATTERY_MAX17040=y
+# CONFIG_BATTERY_MAX17040 is not set
+CONFIG_BATTERY_MAX17040_P01D=y
 CONFIG_BATTERY_MSM=y
 # CONFIG_SMB137B_CHARGER is not set
 # CONFIG_BATTERY_MSM_FAKE is not set
