Disable CONFIG_BACKLIGHT_KTD259 and CONFIG_BACKLIGHT_CHARGE_PUMP.
These are not used on my device.

--- a/arch/arm/configs/cyanogenmod_ponyo_defconfig
+++ b/arch/arm/configs/cyanogenmod_ponyo_defconfig
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Linux kernel version: 2.6.35.11
-# Tue Jan 29 19:12:35 2013
+# Wed Jan 30 17:58:30 2013
 #
 CONFIG_ARM=y
 CONFIG_SYS_SUPPORTS_APM_EMULATION=y
@@ -1950,9 +1950,9 @@ CONFIG_LCD_CLASS_DEVICE=y
 CONFIG_BACKLIGHT_CLASS_DEVICE=y
 # CONFIG_BACKLIGHT_GENERIC is not set
 # CONFIG_BACKLIGHT_ADP8860 is not set
-CONFIG_BACKLIGHT_CHARGE_PUMP=y
+# CONFIG_BACKLIGHT_CHARGE_PUMP is not set
 # CONFIG_BACKLIGHT_TPS61045 is not set
-CONFIG_BACKLIGHT_KTD259=y
+# CONFIG_BACKLIGHT_KTD259 is not set
 
 #
 # Display device support
