separate board-msm7x30-p01d.c.

--- a/arch/arm/configs/cyanogenmod_ponyo_defconfig
+++ b/arch/arm/configs/cyanogenmod_ponyo_defconfig
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Linux kernel version: 2.6.35.11
-# Wed Jan 30 17:58:30 2013
+# Wed Jan 30 20:27:04 2013
 #
 CONFIG_ARM=y
 CONFIG_SYS_SUPPORTS_APM_EMULATION=y
@@ -276,13 +276,14 @@ CONFIG_MSM_REMOTE_SPINLOCK_DEKKERS=y
 #
 # MSM Board Selection
 #
-CONFIG_MACH_MSM7X30_SURF=y
-CONFIG_MACH_MSM7X30_FFA=y
-CONFIG_MACH_MSM7X30_FLUID=y
-CONFIG_MACH_MSM8X55_SURF=y
-CONFIG_MACH_MSM8X55_FFA=y
-CONFIG_MACH_MSM8X55_SVLTE_FFA=y
-CONFIG_MACH_MSM8X55_SVLTE_SURF=y
+# CONFIG_MACH_MSM7X30_SURF is not set
+# CONFIG_MACH_MSM7X30_FFA is not set
+# CONFIG_MACH_MSM7X30_FLUID is not set
+CONFIG_MACH_PANASONIC_P01D=y
+# CONFIG_MACH_MSM8X55_SURF is not set
+# CONFIG_MACH_MSM8X55_FFA is not set
+# CONFIG_MACH_MSM8X55_SVLTE_FFA is not set
+# CONFIG_MACH_MSM8X55_SVLTE_SURF is not set
 # CONFIG_MSM_STACKED_MEMORY is not set
 CONFIG_PHYS_OFFSET=0x13800000
 CONFIG_MSM_AMSS_VERSION=6225
