--- a/arch/arm/mach-msm/Makefile
+++ b/arch/arm/mach-msm/Makefile
@@ -167,8 +167,17 @@ obj-$(CONFIG_MACH_MSM7X27_FFA) += board-msm7x27.o devices-msm7x27.o
 obj-$(CONFIG_MACH_MSM7X27A_RUMI3) += board-msm7x27a.o devices-msm7x27a.o
 obj-$(CONFIG_MACH_MSM7X27A_SURF) += board-msm7x27a.o devices-msm7x27a.o
 obj-$(CONFIG_MACH_MSM7X27A_FFA) += board-msm7x27a.o devices-msm7x27a.o
-obj-$(CONFIG_ARCH_MSM7X30) += board-msm7x30.o devices-msm7x30.o memory_topology.o board-msm7x30-wifi.o
+obj-$(CONFIG_ARCH_MSM7X30) += devices-msm7x30.o memory_topology.o board-msm7x30-wifi.o
 obj-$(CONFIG_ARCH_MSM7X30) += clock-local.o clock-7x30.o acpuclock-7x30.o
+obj-$(CONFIG_ARCH_MSM7X30) += clock-local.o clock-7x30.o acpuclock-7x30.o
+obj-$(CONFIG_MACH_MSM7X30_SURF) += board-msm7x30.o
+obj-$(CONFIG_MACH_MSM7X30_FFA) += board-msm7x30.o
+obj-$(CONFIG_MACH_MSM7X30_FLUID) += board-msm7x30.o
+obj-$(CONFIG_MACH_MSM8X55_SURF) += board-msm7x30.o
+obj-$(CONFIG_MACH_MSM8X55_FFA) += board-msm7x30.o
+obj-$(CONFIG_MACH_MSM8X55_SVLTE_SURF) += board-msm7x30.o
+obj-$(CONFIG_MACH_MSM8X55_SVLTE_FFA) += board-msm7x30.o
+obj-$(CONFIG_MACH_PANASONIC_P01D) += board-msm7x30-p01d.o
 obj-$(CONFIG_MACH_MSM7X25_SURF) += board-msm7x27.o devices-msm7x25.o
 obj-$(CONFIG_MACH_MSM7X25_FFA) += board-msm7x27.o devices-msm7x25.o
 obj-$(CONFIG_ARCH_MSM8960) += board-msm8960.o devices-8960.o footswitch-8x60.o
