--- a/drivers/net/wireless/bcm4330/Makefile
+++ b/drivers/net/wireless/bcm4330/Makefile
@@ -6,7 +6,7 @@ DHDCFLAGS = -DLINUX -DBCMDRIVER -DBCMDONGLEHOST -DUNRELEASEDCHIP      \
   -DBCMPLATFORM_BUS -DSDIO_ISR_THREAD -DWIFI_ACT_FRAME -DCUSTOMER_HW  \
   -Dlinux -Wall -Wstrict-prototypes -Werror -DDHD_SDALIGN=64 -DWLP2P  \
   -DMAX_HDR_READ=64 -DDHD_FIRSTREAD=64 -DPKT_FILTER_SUPPORT -DHW_OOB  \
-  -DMMC_SDIO_ABORT DMACH_MAHIMAHI -Idrivers/net/wireless/bcm4330      \
+  -DMMC_SDIO_ABORT -DMACH_MAHIMAHI -Idrivers/net/wireless/bcm4330     \
   -Idrivers/net/wireless/bcm4330/include
 
 DHDOFILES =         \
