--- a/include/linux/Kbuild
+++ b/include/linux/Kbuild
@@ -413,3 +413,5 @@ header-y += msm_audio_mvs.h
 header-y += msm_ipc.h
 header-y += msm_charm.h
 header-y += tzcom.h
+header-y += msm_audio_qcp.h
+header-y += msm_audio_amrnb.h
